--- a/www/templates/editprodimg.html
+++ b/www/templates/editprodimg.html
@@ -1,5 +1,5 @@
-<div class="modal image-modal transparent" ng-click="closeModalssss()">
-    <div class="modal image-modal transparent" ng-click="closeModalssss()">
+<div class="modal image-modal transparent" ng-click="closeModalsss()">
+    <div class="modal image-modal transparent" ng-click="closeModalsss()">
         <ion-slide-box on-slide-changed="slideChanged(index)">
             <ion-slide ng-repeat="i in modalImages">
                 <img ng-src="{{i.image|serverimage}}" class="fullscreen-image" />
